# execute_evcxr

./: Cargo.toml  DEV-README.md  README.md  STRUCTURE.md
src/: binary_crate.rs  config.rs  evcxr_buf_parser.rs  evcxr_source.rs  lib.rs  parsed_evcxr.rs  scriptlike_rust.rs
