[package]
name = "execute_evcxr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.98", features = ["full", "extra-traits", "parsing", "printing"] }
# the version of proc-macro2 is unspecified because syn is internally using proc-macro2
# and the version of this crate is supposed to match the one used by syn
proc-macro2 = { version = "*", features = ["span-locations"] }
