[package]
name = "execute_evcxr"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "A library for execution of evcxr-supported syntax via building and executing a binary crate"
documentation = "https://docs.rs/execute_evcxr"
readme = "README.md"
repository = "https://github.com/JohnScience/execute_evcxr"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["nalgebra", "latex", "matrix"]
categories = [] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
include = [
    "/Cargo.toml",
    "/LICENSE_APACHE",
    "/LICENSE_MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
# publish | not needed
# metadata | not needed
# default-run | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# resolver | not needed

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.98", features = ["full", "extra-traits", "parsing", "printing"] }
# the version of proc-macro2 is unspecified because syn is internally using proc-macro2
# and the version of this crate is supposed to match the one used by syn
proc-macro2 = { version = "*", features = ["span-locations"] }
quote = "*"
